--- a/Assignment5/partB/css/partB.css
+++ b/Assignment5/partB/css/partB.css
@@ -119,5 +119,45 @@ nav ul
 
 #NB
 {
-  border-color: 
+  border-color: #ba1ff7;
+}
+
+#NL
+{
+  border-color: #8DEA9C;
+}
+
+#NS
+{
+  border-color: #DF578B;
+}
+
+#NT
+{
+  border-color: #BEBF12;
+}
+
+#NU
+{
+  border-color: #2299F1;
+}
+
+#ON
+{
+  border-color: #710177;
+}
+
+#PE
+{
+  border-color: #D82208;
+}
+
+#QC
+{
+  border-color: #562D21;
+}
+
+#SK
+{
+  border-color: #2BC0A5;
 }
