--- a/Assignment6/assignment6.css
+++ b/Assignment6/assignment6.css
@@ -5,11 +5,14 @@
 	font-size: 32px;
 	border: 2px, solid;
 	border-radius: 5px;
+	text-align: left;
+	padding-left: 10px
 }
 
 #com
 {
 	font-size: 20px;
+	font-style: bold;
 }
 
 #signup
@@ -25,34 +28,78 @@
 
 }
 
-.group h3
-{
-	background: #a7aaaf;
-}
-
 .group
 {
 	border: 2px, solid, grey;
-	padding-left: 10px;
-	padding-right: 10px;
 	margin: auto;
-	width: 50%;
+	width: 95%;
 	background: #d1d3d6;
+	padding-bottom: 10px;
+}
+.group h3
+{
+	background: #a7aaaf;
+	text-align: left;
+	padding: 1px;
+	padding-left: 10px;
+}
+
+form div
+{
+	margin-top: 1em;
+	text-align: center;
 }
 
 label
 {
 	 display: inline-block;
+	 width: 120px;
+	 text-align: right;
 }
 
-.group input
+input, select
 {
-	width: auto;
-	margin: 0;
+	width: 300px;
 	box-sizing: border-box;
+	border: 1px solid #999;
 }
 
 body
 {
 	background: grey;
+}
+
+h2
+{
+	padding-left: 10px;
+	text-shadow: 2px, grey;
+}
+
+#req
+{
+	color: red;
+}
+
+#RadioBox
+{
+	background: white;
+	border: 1px solid black;
+	border-radius: 1em;
+	width: 300px;
+	margin: 10px auto;
+}
+#RadioBox label
+{
+	text-align: center;
+}
+#RadioBox ul
+{
+	list-style-type: none;
+	text-align: left;
+}
+#RadioBox input
+{
+	padding: 0px;
+	margin: auto;
+	width: auto;
 }
